Fix navbar overflow

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -45,7 +45,8 @@ body {
     display: block;
     color: white;
     text-align: center;
-    padding: 12px 12px;
+    padding: 6px 6px;
+    margin-right: -8px;
     text-decoration: none;
 }
 
